@@ -135,10 +135,17 @@ namespace JSC {
             return false;
 
         MarkedBlock* block = MarkedBlock::blockFor(x);
-        if (!block || !m_blocks.contains(block))
+        if (!block)
             return false;
 
-        return block->contains(x);
+        size_t size = m_heap.blocks.size();
+        for (size_t i = 0; i < size; i++) {
+            if (block != m_heap.collectorBlock(i))
+                continue;
+            return block->contains(x);
+        }
+        
+        return false;
     }
 
     template <typename Functor> inline void MarkedSpace::forEach(Functor& functor)
